RESOLVED FIXED292646
VideoMediaSampleRenderer doesn't handle going from clear to protected content
https://bugs.webkit.org/show_bug.cgi?id=292646
Summary VideoMediaSampleRenderer doesn't handle going from clear to protected content
Jean-Yves Avenard [:jya]
Reported 2025-05-06 17:40:04 PDT
When we start using a WebCoreDecompressionSession in the VideoMediaSampleRenderer we can never go back to using the AVSampleBufferVideoRenderer So we continue using the WebCoreDecompressionSession to decode encrypted frame. While it doesn't appear to cause an issue, we should make this configurable and for now switch back to using the AVSBDL to perform the decoding.
Attachments
Radar WebKit Bug Importer
Comment 1 2025-05-06 17:43:45 PDT
Jean-Yves Avenard [:jya]
Comment 2 2025-05-07 04:09:24 PDT
Alexey Proskuryakov
Comment 3 2025-05-07 18:52:01 PDT
*** Bug 292645 has been marked as a duplicate of this bug. ***
EWS
Comment 4 2025-05-08 09:16:17 PDT
Committed 294669@main (ac41e368867c): <https://commits.webkit.org/294669@main> Reviewed commits have been landed. Closing PR #45056 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.