VideoMediaSampleRenderer doesn't handle going from clear to protected content https://bugs.webkit.org/show_bug.cgi?id=292646 rdar://150809466

Reviewed by Jer Noble.

Some content provider (Netflix) can stream non-protected content and later
switch to protected using the same HTMLVideoElement. If the WebCoreDecompressionSession
codepath was enabled, we would continue to decrypt and decode the video
content using that same VTDecompressionSession. This wasn't expected to work.
This change add the originally intended way of dealing with protected
content: enqueue the compressed sample to the AVSBDL. This behaviour
is placed behind a new preferences, disabled by default as code had been
in used for several months without anyone noticing.
This will allow to more easily revert back to the original codepath should
the need arise.

Also, use MediaTime and MediaSample in place of CoreMedia objects
(CMTime and CMSampleBuffer respectively) in several methods as it reduces
complexity and improve readability.

* Source/WebCore/platform/graphics/cocoa/VideoMediaSampleRenderer.mm:
(WebCore::VideoMediaSampleRenderer::lastDecodedSampleTime const): Make it use and return a MediaTime
(WebCore::VideoMediaSampleRenderer::hasIncomingOutOfOrderFrame const): Make it use and return a MediaTime
(WebCore::VideoMediaSampleRenderer::minimumUpcomingSampleTime const): Make it use and return a MediaTime
(WebCore::VideoMediaSampleRenderer::setUseDecompressionSessionForProtectedFallback): Added
(WebCore::VideoMediaSampleRenderer::currentTime const): Add convenience method.
(WebCore::VideoMediaSampleRenderer::enqueueSample): Fly-by: m_hasOutOfOrderFrames was incorrectly cleared. It should only ever be set once.
(WebCore::VideoMediaSampleRenderer::decodeNextSampleIfNeeded): Make it us a MediaSample
(WebCore::VideoMediaSampleRenderer::shouldDecodeSample): Make it use a MediaSample.
(WebCore::VideoMediaSampleRenderer::totalVideoFrames const): We need to use the AVSBDL videoPerformanceMetrics when it's used to do decoding
(WebCore::VideoMediaSampleRenderer::droppedVideoFrames const): Ditto
(WebCore::VideoMediaSampleRenderer::corruptedVideoFrames const): Ditto
(WebCore::VideoMediaSampleRenderer::totalFrameDelay const): Ditto

Canonical link: https://commits.webkit.org/294669@main