Source/WebCore/platform/graphics/MediaPlayer.h
@@ -719,7 +719,7 @@ public:
 
 #if USE(AVFOUNDATION)
     AVPlayer *objCAVFoundationAVPlayer() const;
-    void setDecompressionSessionPreferences(bool, bool);
+    void setDecompressionSessionPreferences(bool, bool, bool);
 #endif
 
     bool performTaskAtTime(Function<void()>&&, const MediaTime&);
@@ -877,6 +877,7 @@ private:
 #if USE(AVFOUNDATION)
     bool m_preferDecompressionSession { false };
     bool m_canFallbackToDecompressionSession { false };
+    bool m_videoRendererProtectedFallbackDisabled { true };
 #endif
 
 #if PLATFORM(IOS_FAMILY)
