Source/WebCore/platform/graphics/avfoundation/objc/MediaPlayerPrivateMediaSourceAVFObjC.h
@@ -341,10 +341,11 @@ private:
 
     void isInFullscreenOrPictureInPictureChanged(bool) final;
 
-    void setDecompressionSessionPreferences(bool preferDecompressionSession, bool canFallbackToDecompressionSession) final
+    void setDecompressionSessionPreferences(bool preferDecompressionSession, bool canFallbackToDecompressionSession, bool videoRendererProtectedFallbackDisabled) final
     {
         m_preferDecompressionSession = preferDecompressionSession;
         m_canFallbackToDecompressionSession = canFallbackToDecompressionSession;
+        m_videoRendererProtectedFallbackDisabled = videoRendererProtectedFallbackDisabled;
     }
 
 #if ENABLE(LINEAR_MEDIA_PLAYER)
@@ -430,6 +431,7 @@ ALLOW_NEW_API_WITHOUT_GUARDS_END
     bool m_needsPlaceholderImage { false };
     bool m_preferDecompressionSession { false };
     bool m_canFallbackToDecompressionSession { false };
+    bool m_videoRendererProtectedFallbackDisabled { true };
     LoadOptions m_loadOptions;
 #if HAVE(SPATIAL_TRACKING_LABEL)
     String m_defaultSpatialTrackingLabel;
