Source/WebKit/GPUProcess/media/RemoteMediaPlayerProxy.cpp
@@ -204,7 +204,7 @@ void RemoteMediaPlayerProxy::loadMediaSource(URL&& url, const MediaPlayer::LoadO
     RefPtr player = m_player;
 #if USE(AVFOUNDATION) && ENABLE(MEDIA_SOURCE)
     if (auto preferences = sharedPreferencesForWebProcess())
-        player->setDecompressionSessionPreferences(preferences->mediaSourcePrefersDecompressionSession, preferences->mediaSourceCanFallbackToDecompressionSession);
+        player->setDecompressionSessionPreferences(preferences->mediaSourcePrefersDecompressionSession, preferences->mediaSourceCanFallbackToDecompressionSession, preferences->videoRendererProtectedFallbackDisabled);
 #endif
     player->load(url, options, *protectedMediaSourceProxy());
 
